credit analysis changes

--- a/trade_finance_manager/app/views/case.html
+++ b/trade_finance_manager/app/views/case.html
@@ -12,10 +12,16 @@
           <nav class="moj-primary-navigation" aria-label="Primary navigation">
             <ul class="moj-primary-navigation__list">
               <li class="moj-primary-navigation__item">
-                <a class="moj-primary-navigation__link" href="#1">Inbox</a>
+                <a class="moj-primary-navigation__link" href="inbox.html">Inbox</a>
               </li>
               <li class="moj-primary-navigation__item">
                 <a class="moj-primary-navigation__link"  aria-current="page" href="view_cases.html">Cases</a>
+              </li>
+              <li class="moj-primary-navigation__item">
+                <a class="moj-primary-navigation__link" href="view_cases.html">Deals</a>
+              </li>
+              <li class="moj-primary-navigation__item">
+                <a class="moj-primary-navigation__link" href="view_cases.html">Reports</a>
               </li>
             </ul>
           </nav>
@@ -27,11 +33,11 @@
     <div class="govuk-grid-column-full case-summary">
       <table>
         <tr>
-          <td>
+          <th>
             <h3>C0345</h3>
-          </td>
-          <td>Love to Learn Ltd</td>
-          <td>{{ extensionConfig.stylesheets.Count }}</td>
+          </th>
+          <th>Love to Learn Ltd</th>
+          <th>{{ extensionConfig.stylesheets.Count }}</th>
           <td>Case actions</td>
         </tr>
         <tr>
