--- a/trade_finance_manager/app/views/includes/head.html
+++ b/trade_finance_manager/app/views/includes/head.html
@@ -79,7 +79,23 @@
   }
   .tfm-width {
     width: 1440px;
+    margin: auto;
   }
-
+  .header-label {
+      height: 50px;
+      width: 342px;
+      color: #241F20;
+      font-family: Helvetica;
+      font-size: 48px;
+      font-weight: bold;
+      letter-spacing: 0;
+      line-height: 50px;
+  }
+  .govuk-width-container{
+    margin: 0;
+  }
+  .moj-primary-navigation__container {
+    max-width: 1440px;
+  }
 </style>
 
