--- a/trade_finance_manager/app/views/view_cases_closed.html
+++ b/trade_finance_manager/app/views/view_cases_closed.html
@@ -57,7 +57,7 @@
               </tr>
               <tr class="govuk-table__row">
                 <td class="govuk-table__cell">
-                  <a href="case_view.html">C0345</a>
+                  <a href="case.html">C0345</a>
                 </td>
                 <td class="govuk-table__cell">MIA</td>
                 <td class="govuk-table__cell">5</td>
