--- a/trade_finance_manager/app/views/case_exposure.html
+++ b/trade_finance_manager/app/views/case_exposure.html
@@ -1,4 +1,4 @@
-{% extends "case_view.html" %}
+{% extends "case.html" %}
 {% block sub_content %}
 <div class="govuk-grid-row tfm tfm-width">
     <div class="govuk-grid-column-one-quarter">
