--- a/trade_finance_manager/app/views/case_pricing.html
+++ b/trade_finance_manager/app/views/case_pricing.html
@@ -1,4 +1,4 @@
-{% extends "case_view.html" %}
+{% extends "case.html" %}
 {% block sub_content %}
 <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
