--- a/app/views/cases/tasks/index.html
+++ b/app/views/cases/tasks/index.html
@@ -9,75 +9,32 @@
         sections: [
         {
           heading: {
-            text: 'Set up case'
+            text: 'Exposure check'
           },
           items: [{
-            text: 'Add new or link existing parties in the case',
-            href: '#',
+            text: 'Are you satisfied with the level of exposure this case will add?',
+            href: 'exposure',
             complete: true
-          }, {
-            text: 'create or link an opportunity in Salesforce',
-            href: '#',
-            complete: true
-          }, {
-            text: 'Add a DR04 report',
-            href: '#',
-            complete: false
           }]
       },
       {
         heading: {
-          text: 'Supporting documents'
+          text: 'Pricing check'
         },
         items: [{
-          text: 'Check the exporter questionnaire',
-          href: '#',
+          text: 'Select a risk rating for this case',
+          href: 'pricing',
           complete: false
-        }, {
-          text: 'Income',
-          href: '#'
-        }, {
-          text: 'Regular payments',
-          href: '#'
-        }, {
-          text: 'Property',
-          href: '#'
-        }, {
-          text: 'Savings and investments',
-          href: '#'
-        }, {
-          text: 'Items of value',
-          href: '#'
-        }, {
-          text: 'Restrictions',
-          href: '#'
         }]
       },
       {
         heading: {
-          text: 'Merrits assessment'
+          text: 'Credit analysis'
         },
         items: [{
-          text: 'Incident details',
-          href: '#',
-          complete: true
-        }, {
-          text: 'Respondent details',
-          href: '#',
-          complete: true
-        }, {
-          text: 'Case details',
-          href: '#',
-          complete: true
-        }]
-      },
-      {
-        heading: {
-          text: 'Apply'
-        },
-        items: [{
-          text: 'Submit application',
-          href: '#'
+          text: 'Complete your credit analysis',
+          href: 'credit-analysis',
+          complete: false
         }]
       }
       ]
