--- a/app/views/cases/case.html
+++ b/app/views/cases/case.html
@@ -7,7 +7,7 @@
 {% block beforeContent %}
   <div class="govuk-grid-row tfm tfm-width">
     <div class="govuk-grid-column-full case-summary">
-      <table style="margin:20px">
+      <table style="margin:10px">
         <tr>
           <th>
             <h3>C0345</h3>
@@ -56,7 +56,7 @@
 {% endblock %}
 
 {% block content %}
-<div class="tfm tfm-width">
+<div class="tfm tfm-width" style="margin:10px;">
   {%- from "moj/components/sub-navigation/macro.njk" import mojSubNavigation -%}
 
   {{ mojSubNavigation({
