fixed navigation on credit analysis

--- a/app/views/cases/credit-analysis/index.html
+++ b/app/views/cases/credit-analysis/index.html
@@ -28,11 +28,11 @@
         },
         items: [{
           text: 'About the export',
-          href: '#1.1',
+          href: '#export',
           active: true
         }, {
           text: 'Bank relationship',
-          href: '#1.2'
+          href: '#bank-relationship'
         }]
       },
       {
@@ -41,10 +41,10 @@
         },
         items: [{
           text: 'Company background',
-          href: '#2.1'
+          href: '#company-background'
         }, {
           text: 'Business risk factors',
-          href: '#2.2'
+          href: '#business-risk-factors'
         }]
       },
       {
@@ -53,25 +53,25 @@
         },
         items: [{
           text: 'Company backgrounds',
-          href: '#3.1'
+          href: '#company-backgrounds'
         }, {
           text: 'Financial year based on',
-          href: '#3.2'
+          href: '#financial-year'
         }, {
           text: 'EBITDA',
-          href: '#3.3'
+          href: '#ebitda'
         }, {
           text: 'Cash balance',
-          href: '#3.4'
+          href: '#cash-balance'
         }, {
           text: 'Debt',
-          href: '#3.5'
+          href: '#debt'
         }, {
           text: 'Forecast',
-          href: '#3.6'
+          href: '#forecast'
         }, {
           text: 'Short-term liquidity',
-          href: '#3.7'
+          href: '#short-term-liquidity'
         }]
       },
       {
@@ -80,10 +80,10 @@
         },
         items: [{
           text: 'Supporting factors and recommendations',
-          href: '#4.1'
+          href: '#supporting-factors'
         }, {
           text: 'Key risks',
-          href: '#4.2'
+          href: '#key-risks'
         }]
       }
     ]
@@ -103,11 +103,11 @@ sections: [
         },
         items: [{
           text: 'Enter information about the export',
-          href: '#1.1',
+          href: 'credit-analysis/export',
           active: true
         }, {
           text: 'Enter the exporter`s relationship with the bank',
-          href: '#1.2'
+          href: 'credit-analysis/bank-relationship'
         }]
       },
       {
@@ -116,10 +116,10 @@ sections: [
         },
         items: [{
           text: 'Enter company background',
-          href: '#2.1'
+          href: 'credit-analysis/company-background'
         }, {
           text: 'Enter business risk factors',
-          href: '#2.2'
+          href: 'credit-analysis/business-risk-factors'
         }]
       },
       {
@@ -128,25 +128,25 @@ sections: [
         },
         items: [{
           text: 'Add company accounts',
-          href: '#3.1'
+          href: 'credit-analysis/company-accounts'
         }, {
           text: 'Enter financial this credit analysis is based on',
-          href: '#3.2'
+          href: 'credit-analysis/financial-year'
         }, {
           text: 'Enter information about the EBITDA levels',
-          href: '#3.3'
+          href: 'credit-analysis/ebitda'
         }, {
           text: 'Enter information abouth the cash balance',
-          href: '#3.4'
+          href: 'credit-analysis/cash-balance'
         }, {
           text: 'Enter debts',
-          href: '#3.5'
+          href: 'credit-analysis/debts'
         }, {
           text: 'Enter information about the forecast',
-          href: '#3.6'
+          href: 'credit-analysis/forecast'
         }, {
           text: 'Enter information abouth short-term liquidity',
-          href: '#3.7'
+          href: 'credit-analysis/short-term-liquidity'
         }]
       },
       {
@@ -155,10 +155,10 @@ sections: [
         },
         items: [{
           text: 'Enter supporting factors and recommendations',
-          href: '#4.1'
+          href: 'credit-analysis/supporting-factors'
         }, {
           text: 'Enter key risks',
-          href: '#4.2'
+          href: 'credit-analysis/key-risks'
         }]
       }
     ]
