--- a/app/views/cases/cases_open.html
+++ b/app/views/cases/cases_open.html
@@ -58,7 +58,7 @@
               </tr>
               <tr class="govuk-table__row">
                 <td class="govuk-table__cell">
-                  <a href="case.html">C0345</a>
+                  <a href="tasks">C0345</a>
                 </td>
                 <td class="govuk-table__cell">MIA</td>
                 <td class="govuk-table__cell">5</td>
