--- a/app/views/cases/credit-analysis/export.html
+++ b/app/views/cases/credit-analysis/export.html
@@ -1,6 +1,28 @@
 {% extends "layout.html" %}
 {%- from "govuk/components/textarea/macro.njk" import govukTextarea -%}
+ {% from "govuk/components/breadcrumbs/macro.njk" import govukBreadcrumbs %}
 
+{% block beforeContent %}
+<div style="margin:10px;">
+
+{{ govukBreadcrumbs({
+  items: [
+    {
+      text: "C0345",
+      href: "tasks"
+    },
+    {
+      text: "credit analysis",
+      href: "/cases/credit-analysis"
+    },
+    {
+      text: "export"
+    }
+  ]
+}) }}
+</div>
+
+{% endblock %}
 {% block content %}
     <div class="govuk-grid-row">
         <div class="govuk-grid-column-two-thirds" style="margin: 0 220px">
