--- a/app/views/includes/primary-navigation.html
+++ b/app/views/includes/primary-navigation.html
@@ -1,24 +1,27 @@
-  <div class="govuk-grid-row tfm tfm-width">
-    <div class="govuk-grid-column-full moj-primary-navigation tfm">
-      <div class="moj-primary-navigation__container" style="margin-left: 10px;">
-        <div class="moj-primary-navigation__nav">
-          <nav class="moj-primary-navigation" aria-label="Primary navigation">
-            <ul class="moj-primary-navigation__list">
-              <li class="moj-primary-navigation__item">
-                <a class="moj-primary-navigation__link" href="inbox.html">Inbox</a>
-              </li>
-              <li class="moj-primary-navigation__item">
-                <a class="moj-primary-navigation__link"  aria-current="page" href="/cases">Cases</a>
-              </li>
-              <li class="moj-primary-navigation__item">
-                <a class="moj-primary-navigation__link" href="view_cases.html">Deals</a>
-              </li>
-              <li class="moj-primary-navigation__item">
-                <a class="moj-primary-navigation__link" href="view_cases.html">Reports</a>
-              </li>
-            </ul>
-          </nav>
-        </div>
-      </div>
-    </div>
-  </div>
+  {%- from "moj/components/primary-navigation/macro.njk" import mojPrimaryNavigation -%}
+
+{{ mojPrimaryNavigation({
+label: 'Primary navigation',
+items: [
+{
+  text: 'Inbox',
+  href: '/inbox',
+  active: primary == 'inbox'
+},
+{
+  text: 'Cases',
+  href: '/cases',
+  active: primary == 'cases'
+},
+{
+  text: 'Deals',
+  href: '/deals',
+  active: primary == 'deals'
+},
+{
+    text: 'Reports',
+  href: '/reports',
+  active: primary == 'reports'
+}
+]
+}) }} 
