bank relationship and existin facilities

--- a/app/views/cases/credit-analysis/index.html
+++ b/app/views/cases/credit-analysis/index.html
@@ -33,6 +33,9 @@
         }, {
           text: 'Bank relationship',
           href: '#bank-relationship'
+        }, {
+          text: 'Existing facilities',
+          href: '#existing-facilities'
         }]
       },
       {
@@ -108,6 +111,9 @@ sections: [
         }, {
           text: 'Enter the exporter`s relationship with the bank',
           href: 'credit-analysis/bank-relationship'
+        }, {
+          text: 'Enter the exporter`s exsting facilities with banks and other organisations',
+          href: 'credit-analysis/existing-facility'
         }]
       },
       {
