--- a/app/views/includes/head.html
+++ b/app/views/includes/head.html
@@ -59,6 +59,19 @@
           .case-exposure td:nth-child(9),.case-exposure th:nth-child(9) {
    width: 200px;
   }
+   .existing-facility tr {
+    height: 46px;
+  }
+  .existing-facility td, .existing-facility th {
+     width:180px;
+     text-align: left;
+     padding: 10px 10px;
+  }
+
+  .existing-facility td:nth-child(6),.existing-facility th:nth-child(6) {
+   width: 300px;
+  }
+
   .case-exposure a {
     padding-right: 10px;
   }
