--- a/app/views/cases/credit-analysis/existing-facility.html
+++ b/app/views/cases/credit-analysis/existing-facility.html
@@ -13,10 +13,95 @@
       href: "/cases/credit-analysis"
     },
     {
-      text: "existing facility"
+      text: "existing facilities with banks and other organizations"
     }
   ]
 }) }}
 </div>
 
+{% endblock %}
+{% block content %}
+<div class="govuk-grid-row tfm tfm-width existing-facility">
+  <div class="govuk-grid-column-full" style="margin-left: 0 10px">
+    <h1 class="govuk-heading-xl">Existing facilities with banks and other organisations</h1>
+    <h2>The exporter's existing facilities</h2>
+    <table>
+    <tr>
+      <th>Provider</th>
+      <th>Type</th>
+      <th>Limit</th>
+      <th>Drawn</th>
+      <th>Expiry</th>
+      <th colspan="3">Security</th>
+    </tr>
+    <tr>
+      <td>Natwest</td>
+      <td>Guarantees/ Letters of credit</td>
+      <td>£3,000,000</td>
+      <td>£1,100,000</td>
+      <td>30 Nov 2019 (renewed annually)</td>
+      <td>First charge over property valued at £1.7m 2nd ranging all assets Debenture over Exporter, Duplex Lloyd Properties Ltd and Samarra NewCo Ltd £2m cash deposit</td>
+      <td><a href="#">Change</a></td>
+      <td><a href="#">Remove</a></td>
+    </tr>
+      <tr>
+      <td>Santander</td>
+      <td>Guarantees</td>
+      <td>£12,600,000</td>
+      <td>£0</td>
+      <td>Dec 2020</td>
+      <td>1st ranging all assets Debenture over Exporter, Duplex Lloyd Properties Ltd and Samarra NewCo Ltd</td>
+      <td><a href="#">Change</a></td>
+      <td><a href="#">Remove</a></td>
+    </tr>
+    <tr>
+      <td>Aviva</td>
+      <td>Bond facility</td>
+      <td>£2,400,000</td>
+      <td>£2,400,000</td>
+      <td>Various</td>
+      <td>As above</td>
+      <td><a href="#">Change</a></td>
+      <td><a href="#">Remove</a></td>
+    </tr>
+    <tr>
+      <td>Millenium Insurance Company Ltd</td>
+      <td>Bond facility</td>
+      <td>£500,000</td>
+      <td>£500,000</td>
+      <td>Grid bond - annual renewal until commercial operation date</td>
+      <td>As above</td>
+      <td><a href="#">Change</a></td>
+      <td><a href="#">Remove</a></td>
+    </tr>
+    </table>
+  </div>
+</div>
+<div>
+{% from "moj/components/button-menu/macro.njk" import mojButtonMenu %}
+
+{{ mojButtonMenu({
+items: [{
+text: "Add a facility",
+href: "/cases/credit-analysis/add-a-facility",
+classes: "govuk-button--secondary"
+}]
+}) }} 
+</div>
+<div>
+{{ mojButtonMenu({
+items: [{
+text: "Save and back to credit analysis",
+href: "/cases/credit-analysis"
+}, {
+text: "Continue to company background",
+href: "/cases/credit-analysis/company-background",
+classes: "govuk-button--secondary"
+}, {
+text: "Cancel",
+href: "#",
+classes: "govuk-link"
+}]
+}) }} 
+</div>
 {% endblock %}
