--- a/app/views/cases/exposure/index.html
+++ b/app/views/cases/exposure/index.html
@@ -1,4 +1,3 @@
-    {%- from "moj/components/task-list/macro.njk" import mojTaskList -%}
 {%- from "moj/components/task-list/macro.njk" import mojTaskList -%}
 
 {% extends "cases/case.html" %}
@@ -107,7 +106,7 @@ sections: [
     </div>
 
 <div class="govuk-grid-row case-exposure tfm tfm-width">
-   <div class="govuk-grid-column-full">
+   <div class="govuk-grid-column-full" style="margin-left:10px">
       <h2>New facility requests</h2>
       <table>
         <tr>
@@ -150,7 +149,7 @@ sections: [
    </div>
 </div>
 <div class="govuk-grid-row case-exposure tfm tfm-width">
-   <div class="govuk-grid-column-full">
+   <div class="govuk-grid-column-full" style="margin-left:10px">
       <h2>New facility requests</h2>
       <table>
         <tr>
