pricing front page

--- a/app/views/cases/pricing/index.html
+++ b/app/views/cases/pricing/index.html
@@ -1,218 +1,92 @@
 {% extends "cases/case.html" %}
 {% set selected = 'pricing' %}
 {% block sub_content %}
-<div class="govuk-grid-row">
-    <div class="govuk-grid-column-two-thirds">
-      {%- from "moj/components/task-list/macro.njk" import mojTaskList -%}
-      {{ mojTaskList({
-        sections: [
-        {
-          heading: {
-            text: 'Set up case'
-          },
-          items: [{
-            text: 'Add new or link existing parties in the case',
-            href: '#',
-            complete: true
-          }, {
-            text: 'create or link an opportunity in Salesforce',
-            href: '#',
-            complete: true
-          }, {
-            text: 'Add a DR04 report',
-            href: '#',
-            complete: false
-          }]
-      },
-      {
-        heading: {
-          text: 'Supporting documents'
-        },
-        items: [{
-          text: 'Check the exporter questionnaire',
-          href: '#',
-          complete: false
-        }, {
-          text: 'Income',
-          href: '#'
-        }, {
-          text: 'Regular payments',
-          href: '#'
-        }, {
-          text: 'Property',
-          href: '#'
-        }, {
-          text: 'Savings and investments',
-          href: '#'
-        }, {
-          text: 'Items of value',
-          href: '#'
-        }, {
-          text: 'Restrictions',
-          href: '#'
-        }]
-      },
-      {
-        heading: {
-          text: 'Merrits assessment'
-        },
-        items: [{
-          text: 'Incident details',
-          href: '#',
-          complete: true
-        }, {
-          text: 'Respondent details',
-          href: '#',
-          complete: true
-        }, {
-          text: 'Case details',
-          href: '#',
-          complete: true
-        }]
-      },
-      {
-        heading: {
-          text: 'Apply'
-        },
-        items: [{
-          text: 'Submit application',
-          href: '#'
-        }]
-      }
-      ]
-      }) }}
-    </div>
-    <div class="govuk-grid-column-one-third">
-      <div class="moj-timeline">
-        <div class="moj-timeline__item">
-
-          <div class="moj-timeline__header">
-            <h2 class="moj-timeline__title">Application requires confirmation</h2>
-
-            <p class="moj-timeline__byline">by Joe Bloggs</p>
-
-          </div>
-
-          <p class="moj-timeline__date">
-            <time datetime="2019-06-14T14:01:00.000Z">14 June 2019 at 2:01pm</time>
-          </p>
-
-          <div class="moj-timeline__description">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras non felis risus. Curabitur nec ante vitae felis ullamcorper tincidunt.</p>
-          </div>
-
-        </div>
-
-        <div class="moj-timeline__item">
-
-          <div class="moj-timeline__header">
-            <h2 class="moj-timeline__title">Application review in progress</h2>
-
-            <p class="moj-timeline__byline">by Caseworker 1</p>
-
-          </div>
-
-          <p class="moj-timeline__date">
-            <time datetime="2019-06-07T12:32:00.000Z">7 June 2019 at 12:32pm</time>
-          </p>
-
-          <div class="moj-timeline__description">Your application is being reviewed by one of our case workers.</div>
-
-        </div>
-
-        <div class="moj-timeline__item">
-
-          <div class="moj-timeline__header">
-            <h2 class="moj-timeline__title">Application received</h2>
-
-            <p class="moj-timeline__byline">by Caseworker 1</p>
-
-          </div>
-
-          <p class="moj-timeline__date">
-            <time datetime="2019-06-06T09:12:00.000Z">6 June 2019 at 9:12am</time>
-          </p>
-
-          <div class="moj-timeline__description">Your application has been received – reference MOJ-1234-5678</div>
-
-        </div>
-
-        <div class="moj-timeline__item">
-
-          <div class="moj-timeline__header">
-            <h2 class="moj-timeline__title">Application submitted</h2>
-
-            <p class="moj-timeline__byline">by Joe Bloggs</p>
-
-          </div>
-
-          <p class="moj-timeline__date">
-            <time datetime="2019-05-28T10:45:00.000Z">28 May 2019 at 10:45am</time>
-          </p>
-
-          <div class="moj-timeline__description">
-            <details class="govuk-details govuk-!-margin-bottom-0">
-              <summary class="govuk-details__summary">
-                <span class="govuk-details__summary-text">Application details</span>
-              </summary>
-                    <div class="govuk-details__text">
-            Ut quam nunc, vulputate ac metus pharetra, posuere maximus velit. <a href="https://www.google.com">Etiam nec interdum velit.</a> Suspendisse molestie lectus in eros ornare
-            </div>
-            </details>
-          </div>
-
-        </div>
-
-        <div class="moj-timeline__item">
-
-          <div class="moj-timeline__header">
-            <h2 class="moj-timeline__title">Documents uploaded</h2>
-
-            <p class="moj-timeline__byline">by Joe Bloggs</p>
-
-          </div>
-
-          <p class="moj-timeline__date">
-            <time datetime="2019-05-28T10:15:00.000Z">28 May 2019 at 10:15am</time>
-          </p>
-
-          <div class="moj-timeline__description">
-            <ul class="moj-timeline__documents">
-              <li class="moj-timeline__document-item">
-                <a class="moj-timeline__document-link" href="#">Document 1</a>
-              </li>
-              <li class="moj-timeline__document-item">
-                <a class="moj-timeline__document-link" href="#">Document 1</a>
-              </li>
-            </ul>
-          </div>
-
-        </div>
-
-        <div class="moj-timeline__item">
-
-          <div class="moj-timeline__header">
-            <h2 class="moj-timeline__title">Application started</h2>
-
-            <p class="moj-timeline__byline">by Joe Bloggs</p>
-
-          </div>
-
-          <p class="moj-timeline__date">
-            <time datetime="2019-05-21T13:15:00.000Z">21 May 2019 at 1:15pm</time>
-          </p>
-
-          <div class="moj-timeline__description">
-            <ul class="govuk-list govuk-list--bullet">
-              <li>
-                <a class="govuk-link" href="#">Item 1</li>
-                <li>
-                  <a class="govuk-link" href="#">Item 2</li>
-                </ul>
-              </div>
-
-            </div>
-          </div>
-        </div>
-
+  <div class="govuk-grid-row tfm tfm-width">
+      <div class="govuk-grid-column-three-quarters">
+      <p class="header-label">Pricing</p>
+      </div>
+  </div>
+  <div class="govuk-grid-row tfm tfm-width">
+      <div class="govuk-grid-column-three-quarters separator-line pricing">
+        <h2>Interest Margin</h2>
+        <table>
+          <tr>
+            <th>Facility Id</th>
+            <th>Guarantee type</th>
+            <th>Bank's interest marging</th>
+            <th>Required interest margin</th>
+            <th>Interest margin is</th>
+            <th/>
+          </tr>
+          <tr>
+            <td><a href="#">0020010552</a></td>
+            <td>BSS</td>
+            <td>1.5%</td>
+            <td>1.25%</td>
+            <td><span class="label--graygreen">GOOD</span></td>
+            <td><a href="#">Change</a></td>
+          </tr>
+        </table>
+      </div>
+  </div>
+    <div class="govuk-grid-row tfm tfm-width">
+      <div class="govuk-grid-column-three-quarters separator-line pricing">
+        <h2>Risk profile</h2>
+        <table>
+          <tr>
+            <th>Facility Id</th>
+            <th>Guarantee type</th>
+            <th>Profile</th>
+            <th/>
+            <th/>
+            <th/>
+          </tr>
+          <tr>
+            <td><a href="#">0020010552</a></td>
+            <td>BSS</td>
+            <td>Flat</td>
+            <td/>
+            <td/>
+            <td><a href="#">Change</a></td>
+          </tr>
+        </table>
+      </div>
+  </div>
+    <div class="govuk-grid-row tfm tfm-width">
+      <div class="govuk-grid-column-three-quarters separator-line pricing">
+        <h2>Credit rating</h2>
+        <table>
+          <tr>
+            <td colspan="3"><a href="#">Select a risk rating for this case</a></td>
+            <td/>
+            <td/>
+            <td style="width:80px"><span class="label--blue">TO DO</span></td>
+          </tr>
+        </table>
+        
+      </div>
+  </div>
+    <div class="govuk-grid-row tfm tfm-width">
+      <div class="govuk-grid-column-three-quarters separator-line pricing">
+        <h2>Interest Margin</h2>
+        <table>
+          <tr>
+            <th>Facility Id</th>
+            <th>Loss given default</th>
+            <th/>
+            <th/>
+            <th/>
+            <th/>
+          </tr>
+          <tr>
+            <td><a href="#">0020010552</a></td>
+            <td>50%</td>
+            <td/>
+            <td/>
+            <td/>
+            <td><a href="#">Change</a></td>
+          </tr>
+        </table>
+      </div>
+  </div>
 {% endblock %}
