--- a/app/views/cases/case.html
+++ b/app/views/cases/case.html
@@ -10,16 +10,16 @@
       <table style="margin:10px">
         <tr>
           <th>
-            <h3>C0345</h3>
+            <p class="header-label" style="color: white;">C0345</p>
           </th>
-          <th>Love to Learn Ltd</th>
+          <th><p class="header-label" style="color: white;font-weight: normal;">Love to Learn Ltd</p></th>
           <th>{{ extensionConfig.stylesheets.Count }}</th>
           <td>Case actions</td>
         </tr>
         <tr>
           <td>Type of work</td>
           <td>
-            <label style="background-color:light-blue">Manual Inclusion Application</label>
+            <span class="label--graygreen">Manual Inclusion Application</span>
           </td>
           <td>Date received</td>
           <td>16 Dec 2019</td>
@@ -46,7 +46,7 @@
         </tr>
         <tr>
           <td>Guarantee types</td>
-          <td>BSS</td>
+          <td><span class="label--yellow">BSS</span></td>
           <td></td>
           <td></td>
         </tr>
