--- a/app/views/cases/pricing/index.html
+++ b/app/views/cases/pricing/index.html
@@ -24,7 +24,7 @@
             <td>1.5%</td>
             <td>1.25%</td>
             <td><span class="label--graygreen">GOOD</span></td>
-            <td><a href="#">Change</a></td>
+            <td><a href="/cases/pricing/interest-margin">Change</a></td>
           </tr>
         </table>
       </div>
@@ -47,7 +47,7 @@
             <td>Flat</td>
             <td/>
             <td/>
-            <td><a href="#">Change</a></td>
+            <td><a href="/cases/pricing/risk-profile">Change</a></td>
           </tr>
         </table>
       </div>
@@ -57,7 +57,7 @@
         <h2>Credit rating</h2>
         <table>
           <tr>
-            <td colspan="3"><a href="#">Select a risk rating for this case</a></td>
+            <td colspan="3"><a href="/cases/pricing/credit-rating.html">Select a risk rating for this case</a></td>
             <td/>
             <td/>
             <td style="width:80px"><span class="label--blue">TO DO</span></td>
@@ -68,7 +68,7 @@
   </div>
     <div class="govuk-grid-row tfm tfm-width">
       <div class="govuk-grid-column-three-quarters separator-line pricing">
-        <h2>Interest Margin</h2>
+        <h2>Loss given default</h2>
         <table>
           <tr>
             <th>Facility Id</th>
@@ -79,7 +79,7 @@
             <th/>
           </tr>
           <tr>
-            <td><a href="#">0020010552</a></td>
+            <td><a href="loss-given-default">0020010552</a></td>
             <td>50%</td>
             <td/>
             <td/>
