pricing detail pages; exposure page

--- a/app/views/cases/pricing/index.html
+++ b/app/views/cases/pricing/index.html
@@ -63,7 +63,6 @@
             <td style="width:80px"><span class="label--blue">TO DO</span></td>
           </tr>
         </table>
-        
       </div>
   </div>
     <div class="govuk-grid-row tfm tfm-width">
@@ -84,7 +83,7 @@
             <td/>
             <td/>
             <td/>
-            <td><a href="#">Change</a></td>
+            <td><a href="/cases/pricing/loss-given-default">Change</a></td>
           </tr>
         </table>
       </div>
