--- a/app/views/includes/head.html
+++ b/app/views/includes/head.html
@@ -64,6 +64,15 @@
   .case-exposure td:nth-child(9),.case-exposure th:nth-child(9) {
    width: 200px;
   }
+  .exposure-summary tr {
+    height:30px;
+  }
+  .exposure-summary td:nth-child(1),.exposure-summary th:nth-child(1) {
+   width: 170px;
+  }
+
+
+
    .existing-facility tr {
     height: 50px;
 
@@ -123,7 +132,7 @@
 
   .separator-line {
     border-top-style: solid;
-
+    margin-top: 30px;
   }
   .pricing table {
     width: 100%;
@@ -131,6 +140,7 @@
     margin-bottom:50px;
     cellspacing: 0;
     border-collapse:collapse;
+
   }
     .pricing td:nth-child(1), .pricing th:nth-child(1) {
     width:120px;
