--- a/app/views/cases/exposure/index.html
+++ b/app/views/cases/exposure/index.html
@@ -3,27 +3,26 @@
 {% extends "cases/case.html" %}
 {% set selected = 'exposure' %}
 {% block sub_content %}
-<h1>Exposure</h1>
-<div class="govuk-grid-row tfm tfm-width">
-    <div class="govuk-grid-column-full">
-{{ mojTaskList({
-sections: [
-{
-  heading: {
-    text: 'Exposure check'
-  },
-  items: [{
-    text: 'Are you satisfied with the level of exposure this case will add?',
-    href: 'exposure/pricing-check',
-    complete: false
-  }]
-}
-]
-}) }}
-</div> 
-</div>
-<div class="govuk-grid-row tfm tfm-width">
-    <div class="govuk-grid-column-one-quarter">
+  <div class="govuk-grid-row tfm tfm-width">
+      <div class="govuk-grid-column-three-quarters">
+      <p class="header-label">Exposure</p>
+      </div>
+  </div>
+      <div class="govuk-grid-row tfm tfm-width">
+      <div class="govuk-grid-column-three-quarters separator-line pricing">
+        <h2>Exposure check</h2>
+        <table>
+          <tr>
+            <td colspan="3" style="font-size:19px;"><a href="/cases/exposure/pricing-check">Are you satisfied with the level of exposure this case will add?</a></td>
+            <td/>
+            <td/>
+            <td style="width:80px"><span class="label--blue">TO DO</span></td>
+          </tr>
+        </table>
+      </div>
+  </div>
+<div class="govuk-grid-row tfm tfm-width exposure-summary ">
+    <div class="govuk-grid-column-one-quarter separator-line">
 
 
       <table>
@@ -62,10 +61,10 @@ sections: [
         </tr>
       </table>
     </div>
-    <div class="govuk-grid-column-one-quarter">
+    <div class="govuk-grid-column-one-quarter separator-line">
       <div id = "container" style = "width: 200px; height: 200px; margin: 0 auto; align:left;">
-      </div>
-            <script type = "text/javascript" src = "https://www.gstatic.com/charts/loader.js">
+    </div>
+    <script type = "text/javascript" src = "https://www.gstatic.com/charts/loader.js">
       </script>
       <script type = "text/javascript">
          google.charts.load('current', {packages: ['corechart']});     
@@ -104,10 +103,11 @@ sections: [
          google.charts.setOnLoadCallback(drawChart);
       </script>
     </div>
-
+    <div class="govuk-grid-column-one-quarter separator-line"/>
+   </div>
 <div class="govuk-grid-row case-exposure tfm tfm-width">
-   <div class="govuk-grid-column-full" style="margin-left:10px">
-      <h2>New facility requests</h2>
+   <div class="govuk-grid-column-full separator-line" style="margin-left:10px">
+      <h2>New guarantee request</h2>
       <table>
         <tr>
           <th>Facility ID</th>
@@ -149,8 +149,8 @@ sections: [
    </div>
 </div>
 <div class="govuk-grid-row case-exposure tfm tfm-width">
-   <div class="govuk-grid-column-full" style="margin-left:10px">
-      <h2>New facility requests</h2>
+   <div class="govuk-grid-column-full separator-line" style="margin-left:10px">
+      <h2>Existing guarantees UKEF has committed to</h2>
       <table>
         <tr>
           <th>Facility ID</th>
@@ -165,7 +165,24 @@ sections: [
           <th>Expected loss</th>
         </tr>
         <tr>
-          <td colspan="10" style="background-color:#F3F2F1">
+          <td colspan="10" style="background-color:#F3F2F1;font-weight:bold;">
+            <a href="#">0020010552</a> Provision of education services and material to Kingdom of Wakanda Colleges of Excellence
+          </td>
+        </tr>
+        <tr>
+          <td><a href="#">0020010552</a></td>
+          <td>BSS</td>
+          <td>Underwriting</td>
+          <td>11 Dec 2019</td>
+          <td>9 mths</td>
+          <td>31 Aug 2020</td>
+          <td>GBP 3,468,195.18</td>
+          <td>(SAR 17,346,525.00)</td>
+          <td>GBP 2,774,566.14 (80%)</td>
+          <td>2.45%</td>       
+        </tr>
+        <tr>
+          <td colspan="10" style="background-color:#F3F2F1;font-weight:bold;">
             <a href="#">0020010552</a> Provision of education services and material to Kingdom of Wakanda Colleges of Excellence
           </td>
         </tr>
