--- a/app/views/cases/case.html
+++ b/app/views/cases/case.html
@@ -66,7 +66,7 @@
   href: 'tasks',
   active: selected=='tasks'
   }, {
-  text: 'Deal',
+  text: 'Deals',
   href: 'deals',
   active: selected=='deals'
   }, {
