--- a/app/views/includes/head.html
+++ b/app/views/includes/head.html
@@ -134,6 +134,24 @@
     border-top-style: solid;
     margin-top: 30px;
   }
+  .deal table{
+    text-align: left;
+    margin-bottom:50px;
+    cellspacing: 0;
+    border-collapse:collapse;
+  }
+  
+  .deal tr {
+    height: 50px;
+  }
+  .deal th {
+    font-size:19px;
+  }
+  .deal td:nth-child(1), .deal th:nth-child(1) {
+    width:300px;
+    font-weight: bold;
+  }
+  
   .pricing table {
     width: 100%;
     text-align: left;
