--- a/app/views/cases/credit-analysis/add-a-facility.html
+++ b/app/views/cases/credit-analysis/add-a-facility.html
@@ -13,7 +13,7 @@
       href: "/cases/credit-analysis"
     },
     {
-      text: "add existing facility"
+      text: "add a facility"
     }
   ]
 }) }}
