--- a/app/views/cases/credit-analysis/export.html
+++ b/app/views/cases/credit-analysis/export.html
@@ -84,10 +84,10 @@ classes: 'govuk-label'
 {{ mojButtonMenu({
 items: [{
 text: "Save and back to credit analysis",
-href: "/credit-analysis"
+href: "/cases/credit-analysis"
 }, {
 text: "Continue to bank relationship",
-href: "/credit-analysis/bank-relationship",
+href: "/cases/credit-analysis/bank-relationship",
 classes: "govuk-button--secondary"
 }, {
 text: "Cancel",
