--- a/app/views/cases/exposure/index.html
+++ b/app/views/cases/exposure/index.html
@@ -27,7 +27,7 @@
 
       <table>
         <tr>
-          <th colspan="2" style="text-align:left">UKEF exposure</td>
+          <th colspan="3" style="text-align:left"><p class="header-label">UKEF Exposure</p></td>
         </tr>
         <tr>
           <td>Exporter's limit</td>
@@ -87,9 +87,9 @@
             var options = {
              //  'title':'UKEF exposure',
                'colors': ['#1D70B8', '#F47738', '#912B88', '#28A197', '#F3F2F1'],
-               'width':200,
-               'height':200,
-               chartArea:{left:0,top:20,width:"100%",height:"100%"},
+               'width':250,
+               'height':250,
+               chartArea:{left:0,top:50,width:"100%",height:"100%"},
                pieHole: 0.4,
                legend: 'none',
                pieSliceText: 'none',
