--- a/app/views/cases/credit-analysis/index.html
+++ b/app/views/cases/credit-analysis/index.html
@@ -10,7 +10,8 @@
     <div class="govuk-grid-column-one-quarter tfm">  
 
       {{ govukButton({
-        text: "Submit for Approval"
+        text: "Submit for Approval",
+        href: "/cases/credit-analysis/approval"
       }) }}
     </div>
     
