--- a/app/views/cases/exposure/index.html
+++ b/app/views/cases/exposure/index.html
@@ -37,7 +37,7 @@
         <tr>
           <td>Issued guarantees</td>
           <td><span class="dot" style="background-color: #1D70B8"/></td>
-          <td></span>GBP 394,870.38</td>
+          <td>GBP 394,870.38</td>
         </tr>
         <tr>
           <td>Committed guarantees</td>
@@ -47,7 +47,7 @@
         <tr>
           <td>Other applications</td>
           <td><span class="dot" style="background-color: #912B88"/></td>
-          <td></span>GBP 0</td>
+          <td>GBP 0</td>
         </tr>
         <tr>
           <td>This application</td>
@@ -80,13 +80,14 @@
                ['Committed guarantees', 5714285.71],
                ['Other applications', 0],
                ['This application', 3468195.18],
-               ['Remaining headroom', 3468195.18]
+               ['Remaining headroom', 422648.73]
             ]);
                
             // Set chart options
             var options = {
              //  'title':'UKEF exposure',
                'colors': ['#1D70B8', '#F47738', '#912B88', '#28A197', '#F3F2F1'],
+               tooltip: { textStyle: { fontName: 'Helvetica', fontSize: 16 } }, 
                'width':250,
                'height':250,
                chartArea:{left:0,top:50,width:"100%",height:"100%"},
