--- a/app/views/inbox/index.html
+++ b/app/views/inbox/index.html
@@ -1,2 +1,119 @@
 {% extends 'layout.html' %}
+{% block content %}
 {% set primary = 'inbox' %}
+<div class="govuk-grid-row tfm tfm-width">
+    <div class="govuk-grid-column-full" style="margin-left:10px;">
+        <p class="header-label">Inbox</p>
+
+        {%- from "moj/components/sub-navigation/macro.njk" import mojSubNavigation -%}
+
+        {{ mojSubNavigation({
+        label: 'Sub navigation',
+        items: [{
+        text: 'Manual inclusion applications',
+        href: '#1',
+        active: true
+        }, {
+        text: 'Amendmend requests',
+        href: '#2'
+        }]
+        }) }} 
+ <h2>Manual inclusion applications received</h2>
+    </div>
+</div>
+<div class="govuk-grid-row tfm tfm-width">
+    <div class="govuk-grid-column-two-thirds" style="padding-left:20px;">
+
+       
+        <div>
+            Select one or more to:
+            <ul>
+                <li>create a new case</li>
+                <li>add to an existing case</li>
+            </ul>
+        </div>
+    </div>
+    <div class="govuk-grid-column-one-third">
+        {% from "moj/components/button-menu/macro.njk" import mojButtonMenu %}
+
+        {{ mojButtonMenu({
+        items: [{
+        text: "Create a case",
+        href: "/inbox/create_case"
+        }, {
+        text: "Add to and existing case",
+        href: "/inbox/add-to-existing-case",
+        classes: "govuk-button--secondary"
+        }]
+        }) }} 
+    </div>
+</div>
+<div class="govuk-grid-row tfm tfm-width">
+    <div class="govuk-grid-column-full" style="margin-left:10px;">
+    <table class="govuk-table">
+<thead class="govuk-table__head">
+<tr class="govuk-table__row">
+  <th class="govuk-table__header moj-multi-select__select-all-container" scope="col"></th>
+  <th class="govuk-table__header" scope="col">Deal ID</th>
+  <th class="govuk-table__header" scope="col">Exporter</th>
+  <th class="govuk-table__header" scope="col">Buyer</th>
+    <th class="govuk-table__header" scope="col">Industry sector</th>
+  <th class="govuk-table__header" scope="col">Bank</th>
+  <th class="govuk-table__header govuk-table__header--date" scope="col">Date received</th>
+</tr>
+</thead>
+<tbody class="govuk-table__body">
+<tr class="govuk-table__row govuk-table__row--selected">
+  <td class="govuk-table__cell">
+    <div class="govuk-checkboxes__item govuk-checkboxes--small moj-multi-select__checkbox">
+      <input type="checkbox" class="govuk-checkboxes__input" id="mountain-aconcagua">
+      <label class="govuk-label govuk-checkboxes__label" for="mountain-aconcagua">
+        <span class="govuk-visually-hidden">Select 0020010027</span>
+      </label>
+    </div>
+  </td>
+  <td class="govuk-table__cell"><a href="#">0020010027</a></td>
+  <td class="govuk-table__cell"><a href="#">Rowntree Defence Ltd</a></td>
+  <td class="govuk-table__cell">Government of the People's Rep....</td>
+  <td class="govuk-table__cell">Defence</td>
+  <td class="govuk-table__cell">Santander</td>
+  <td class="govuk-table__cell govuk-table__cell--date">3 Sep 2019</td>
+</tr>
+<tr class="govuk-table__row">
+  <td class="govuk-table__cell">
+    <div class="govuk-checkboxes__item govuk-checkboxes--small moj-multi-select__checkbox">
+      <input type="checkbox" class="govuk-checkboxes__input" id="mountain-denali" value="denali">
+      <label class="govuk-label govuk-checkboxes__label" for="mountain-denali">
+        <span class="govuk-visually-hidden">Select 0020010029</span>
+      </label>
+    </div>
+  </td>
+  </td>
+  <td class="govuk-table__cell"><a href="#">0020010029</a></td>
+  <td class="govuk-table__cell"><a href="#">Rowntree Defence Ltd</a></td>
+  <td class="govuk-table__cell">Government of the People's Rep....</td>
+  <td class="govuk-table__cell">Defence</td>
+  <td class="govuk-table__cell">Santander</td>
+  <td class="govuk-table__cell govuk-table__cell--date">3 Sep 2019</td>
+</tr>
+<tr class="govuk-table__row">
+  <td class="govuk-table__cell">
+    <div class="govuk-checkboxes__item govuk-checkboxes--small moj-multi-select__checkbox">
+      <input type="checkbox" class="govuk-checkboxes__input" id="mountain-elbrus" value="elbrus">
+      <label class="govuk-label govuk-checkboxes__label" for="mountain-elbrus">
+        <span class="govuk-visually-hidden">Select 0020010552</span>
+      </label>
+    </div>
+  </td>
+  <td class="govuk-table__cell"><a href="#">0020010552</a></td>
+  <td class="govuk-table__cell"><a href="#">Love to Learn Ltd</a></td>
+  <td class="govuk-table__cell">Kingdom of Wakanda Colleg....</td>
+  <td class="govuk-table__cell">Education</td>
+  <td class="govuk-table__cell">Lloyds bank</td>
+  <td class="govuk-table__cell govuk-table__cell--date">16 Dec 2019</td>
+</tr>
+</tbody>
+</table> 
+    </div>
+</div>
+{% endblock %}
