--- a/app/views/inbox/create_case.html
+++ b/app/views/inbox/create_case.html
@@ -26,7 +26,7 @@
 </div>
     <div class="govuk-grid-row tfm tfm-width">
       <div class="govuk-grid-column-one-third flex-container" style="margin: 10px;">
-        <a class="govuk-button" data-module="govuk-button" href="/inbox">Confirm and continue</a>
+        <a class="govuk-button" data-module="govuk-button" href="/cases/tasks">Confirm and continue</a>
         <a href="/inbox" style="margin: 10px;">Cancel</a>
       </div>
     </div>
